--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
 body {
 	margin: 0 auto;
 	background-color: #d9f0f9;
-	background-image: url("../images/blue-bg.jpg");
+	background-image: url("../images/bg1.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -49,10 +49,10 @@ a {
 }
 .sidebar {
     width: 190px;
-    float: left;
+/*    float: left;*/
 /*    border: 1px solid #3c88b7;*/
     min-height: 50px;
-    margin: 10px;
+    margin: 10px auto;
 }
 .sidebar ul {
     list-style-type: none;
@@ -156,10 +156,15 @@ ul.main-menu>li>a:hover, ul.main-menu > li.current-menu-item >a, ul.main-menu>li
     width: 100%!important;
 }
 .card-body{
+    width: 100%;
     padding: 10px;
 }
 .heading-title{
     color: #4273cb;
+}
+.heading img {
+    max-width: 100%;
+    height: 80px;
 }
 .paragraph{
     line-height: 140%;
@@ -180,6 +185,7 @@ ul.main-menu>li>a:hover, ul.main-menu > li.current-menu-item >a, ul.main-menu>li
     color: #FFFFFF;
     font-weight: 500;
     border-radius: 6px;
+    cursor: pointer;
 }
 .btn:hover {
     background-color: #4691bf;
@@ -191,4 +197,289 @@ ul.main-menu>li>a:hover, ul.main-menu > li.current-menu-item >a, ul.main-menu>li
 .owner img {
     width: 150px;
     height: 150px;
+}
+
+.text-primary {
+    color: #3c88b7;
+}
+
+.home-image {
+    height: auto;
+    max-width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+}
+.projects{
+    border: 1px solid #3c88b7;
+}
+.project-img img{
+    height: auto;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    margin-bottom: -4px;
+}
+
+.project-caption {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 17px;
+    color: #ffffff;
+    padding: 5px;
+    font-weight: 600;
+    background-color: #4691bf;
+}
+
+
+.form-control {
+    display: block;
+    width: 80%;
+    padding: .5rem .75rem;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #495057;
+    background-color: #fff;
+    background-image: none;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: .25rem;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+/* GRID */
+
+/* CONTAINER */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+
+/* ROW */
+.row {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+
+.col-xs-12 {
+  grid-column: span 12
+}
+
+.col-xs-11 {
+  grid-column: span 11;
+}
+
+.col-xs-10 {
+  grid-column: span 10
+}
+
+.col-xs-9 {
+  grid-column: span 9
+}
+
+.col-xs-8 {
+  grid-column: span 8
+}
+
+.col-xs-7 {
+  grid-column: span 7
+}
+
+.col-xs-6 {
+  grid-column: span 6
+}
+
+.col-xs-5 {
+  grid-column: span 5
+}
+
+.col-xs-4 {
+  grid-column: span 4
+}
+
+.col-xs-3 {
+  grid-column: span 3
+}
+
+.col-xs-2 {
+  grid-column: span 2
+}
+
+.col-xs-1 {
+  grid-column: span 1
+}
+
+@media (min-width: 768px) {
+  .col-sm-12 {
+    grid-column: span 12
+  }
+
+  .col-sm-11 {
+    grid-column: span 11;
+  }
+
+  .col-sm-10 {
+    grid-column: span 10
+  }
+
+  .col-sm-9 {
+    grid-column: span 9
+  }
+
+  .col-sm-8 {
+    grid-column: span 8
+  }
+
+  .col-sm-7 {
+    grid-column: span 7
+  }
+
+  .col-sm-6 {
+    grid-column: span 6
+  }
+
+  .col-sm-5 {
+    grid-column: span 5
+  }
+
+  .col-sm-4 {
+    grid-column: span 4
+  }
+
+  .col-sm-3 {
+    grid-column: span 3
+  }
+
+  .col-sm-2 {
+    grid-column: span 2
+  }
+
+  .col-sm-1 {
+    grid-column: span 1
+  }
+}
+
+@media (min-width: 992px) {
+  .col-md-12 {
+    grid-column: span 12
+  }
+
+  .col-md-11 {
+    grid-column: span 11;
+  }
+
+  .col-md-10 {
+    grid-column: span 10
+  }
+
+  .col-md-9 {
+    grid-column: span 9
+  }
+
+  .col-md-8 {
+    grid-column: span 8
+  }
+
+  .col-md-7 {
+    grid-column: span 7
+  }
+
+  .col-md-6 {
+    grid-column: span 6
+  }
+
+  .col-md-5 {
+    grid-column: span 5
+  }
+
+  .col-md-4 {
+    grid-column: span 4
+  }
+
+  .col-md-3 {
+    grid-column: span 3
+  }
+
+  .col-md-2 {
+    grid-column: span 2
+  }
+
+  .col-md-1 {
+    grid-column: span 1
+  }
+}
+
+@media (min-width: 1200px) {
+  .col-lg-12 {
+    grid-column: span 12
+  }
+
+  .col-lg-11 {
+    grid-column: span 11;
+  }
+
+  .col-lg-10 {
+    grid-column: span 10
+  }
+
+  .col-lg-9 {
+    grid-column: span 9
+  }
+
+  .col-lg-8 {
+    grid-column: span 8
+  }
+
+  .col-lg-7 {
+    grid-column: span 7
+  }
+
+  .col-lg-6 {
+    grid-column: span 6
+  }
+
+  .col-lg-5 {
+    grid-column: span 5
+  }
+
+  .col-lg-4 {
+    grid-column: span 4
+  }
+
+  .col-lg-3 {
+    grid-column: span 3
+  }
+
+  .col-lg-2 {
+    grid-column: span 2
+  }
+
+  .col-lg-1 {
+    grid-column: span 1
+  }
 }
